--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-	<style>
-		h1 {color:blue; text-align: center;}
-	</style>
-</head>
-<body>
-	<h1>PROJECTS</h1>
+
+	<h1 class = "projects_title">Projects</h1>
 	<ul><% @project.each do |a| %>
 		<li>
 			<%= a.name %> 
@@ -19,5 +11,3 @@
 
 		<% end %>
 		</ul>
-</body>
-</html>
