--- a/app/views/projects/error.html.erb
+++ b/app/views/projects/error.html.erb
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-	<style>
-		h1 {
-			text-align: center;
-			color:white;
-			background-color: #E60EE2;
-		}
-	</style>
-</head>
-<body>
-<h1>NOT TODAY</h1>
-</body>
-</html>
+<h2 class="error">PIDE PERDÓN POR EL RETRASO</h2>
