--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,1 +1,5 @@
-<h1>A</h1>
+<h1>RESULT</h1>
+<ul>
+	<li><%= @project.entries.last.hours %> h</li>
+	<li><%= @project.entries.last.minutes %> min</li>
+</ul>
