--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,9 +13,15 @@
  *= require_tree .
  *= require_self
  */
+h1 {
+	color:white;
+	text-align: center;
+	font-family: 'Lobster', cursive;
+}
+
 
  body {
- 	background-color: #a49;
+ 	background-color: #349;
  }
  .error {
  	text-align: center;
