--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,13 +1,21 @@
-<h1>FORMULARIO</h1>
+<h1>FORM</h1>
+<%if @entry.errors.any? %>
+<ul>
+	<% @entry.errors.full_messages.each do |error_msg| %>
+	<li><%= error_msg %></li>
+	<% end %>
+
+</ul>
+<% end %>
 
 <%= form_for [@project, @entry] do |f| %>
-	<%= f.label :hours %>
+	<%= f.label :hours, 'Name: ' %>
 	<%= f.text_field :hours %>
 	<br>
-	<%= f.label :minutes %>
+	<%= f.label :minutes, 'Minutes: ' %>
 	<%= f.text_field :minutes %>
 	<br>
-	<%= f.label :date %>
+	<%= f.label :date, 'Date: ' %>
 	<%= f.date_field :date %>
 	<br>
 
